--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -1,3 +1,8 @@
+@import url(//db.onlinewebfonts.com/c/bd6213fa49bedc8cb050c63f14360efa?family=Circular+Air+Book);
+
+@font-face {font-family: "Circular Air Book"; src: url("//db.onlinewebfonts.com/t/bd6213fa49bedc8cb050c63f14360efa.eot"); src: url("//db.onlinewebfonts.com/t/bd6213fa49bedc8cb050c63f14360efa.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/bd6213fa49bedc8cb050c63f14360efa.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/bd6213fa49bedc8cb050c63f14360efa.woff") format("woff"), url("//db.onlinewebfonts.com/t/bd6213fa49bedc8cb050c63f14360efa.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/bd6213fa49bedc8cb050c63f14360efa.svg#Circular Air Book") format("svg"); }
+
+
 .form-header {
         display: flex;
         align-items: center;
@@ -10,7 +15,7 @@
     position: absolute;
     left: 264px;
     top: 8px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   font-family: Circular Air Book;
     font-weight: 700;
     font-size: 16px;
 }
@@ -100,7 +105,7 @@ form .data-3 {
     color: rgb(113, 113, 113);
     font-size: 12px;
     font-weight: 400;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: Circular Air Book;
 }
 
 .data-2:first-child {
@@ -122,7 +127,7 @@ form .data-3 {
     border: none;
     background: none;
     outline: none;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+ font-family: Circular Air Book;
     
 }
 
@@ -135,7 +140,7 @@ form .data-3 {
     border: none;
     background: none;
     outline: none;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+ font-family: Circular Air Book;
     
 }
 
@@ -151,9 +156,9 @@ form .data-3 {
     // background-color: red;
     background-image: radial-gradient(circle at center center, rgb(255, 56, 92) 0%, rgb(230, 30, 77) 27.5%, rgb(227, 28, 95) 40%, rgb(215, 4, 102) 57.5%, rgb(189, 30, 89) 75%, rgb(189, 30, 89) 100%) !important;
     color: white;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+ font-family: Circular Air Book;
     border-radius: 10px;
-    border: 1px solid red;
+    border:none;
     cursor: pointer;
 }
 
@@ -161,14 +166,36 @@ form .data-3 {
 .dont-have-acct-2 {
     display: flex;
     // margin-top: 35px;
-    margin-left: 15px;
+    justify-content: center;
     align-items: center;
+}
+
+.dont-have-acct-2 button {
+    padding: 5px;
+    font-family: Circular Air Book;
 }
 
 .dont-have-acct span {
     padding-left: 15px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+ font-family: Circular Air Book;
     font-size: 14px;
     color: #484848;
+}
+
+
+#subd {
+
+    cursor: pointer;
+
+    border: 1px solid rgb(161, 160, 160);
+    border-radius: 12px;
+    width: 100%;
+    padding: 7px 10px;
+    height: 40px;
+    font-size: 16px;
+    margin-top: 10px;
+    background: none;
+    outline: none;
+    font-family: Circular Air Book;
 }
 
