--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       window.usericon = "<%=image_url('usericon.svg')  %>"
       window.linkedin = "<%=image_url('linkedin.png')  %>"
       window.github = "<%=image_url('githublogo.png')  %>"
-      window.googleimg = "<%=image_url('google.png')  %>"
+      window.al = "<%=image_url('al.png')  %>"
       window.facebook = "<%=image_url('Facebook-logo.png')  %>"
       window.aA = "<%=image_url('aA.png')  %>"
       window.x = "<%=image_url('x.svg')  %>"
