--- a/app/assets/stylesheets/mainform.scss
+++ b/app/assets/stylesheets/mainform.scss
@@ -1,7 +1,12 @@
+
+@import url(//db.onlinewebfonts.com/c/bd6213fa49bedc8cb050c63f14360efa?family=Circular+Air+Book);
+
+@font-face {font-family: "Circular Air Book"; src: url("//db.onlinewebfonts.com/t/bd6213fa49bedc8cb050c63f14360efa.eot"); src: url("//db.onlinewebfonts.com/t/bd6213fa49bedc8cb050c63f14360efa.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/bd6213fa49bedc8cb050c63f14360efa.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/bd6213fa49bedc8cb050c63f14360efa.woff") format("woff"), url("//db.onlinewebfonts.com/t/bd6213fa49bedc8cb050c63f14360efa.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/bd6213fa49bedc8cb050c63f14360efa.svg#Circular Air Book") format("svg"); }
+
 .mfb {
     z-index: 998;
     position: absolute;
-    top: 130px;
+    top: 80px;
     right: 90px;
     width: 190px;
     height:200px;
@@ -26,7 +31,7 @@
     margin-bottom: 2px;
     height: 35px;
     background: white;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: Circular Air Book;
     border-radius: 4px;
     border: 1px solid white;
     font-size: 16px;
