--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,13 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+     <meta name="description" content="_" />
+    <meta name="title" property="og:title" content="_" />
+    <meta property="og:type" content="_" />
+    <meta name="image" property="og:image" content="<%= image_url('meta.jpg') %>"  />
+    <meta name="description" property="og:description" content="_" /><meta name="author" content="_" />
+
+
 
     <script type="text/javascript">
       window.airbnbicon = "<%=image_url('airbnbicon.png')  %>"
