--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,12 @@
     <meta name="image" property="og:image" content="<%= image_url('meta.jpg') %>"  />
     <meta name="description" property="og:description" content="_" /><meta name="author" content="_" />
 
+    <%= favicon_link_tag asset_path('fav.png') %>
+
+  
+    
+
+
 
 
     <script type="text/javascript">
